--- a/Rmd_template.Rmd
+++ b/Rmd_template.Rmd
@@ -27,4 +27,14 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
+## VisNetwork
+
+```{r visNetwork, echo=TRUE}
+require(visNetwork, quietly = TRUE)
+# minimal example
+nodes <- data.frame(id = 1:3)
+edges <- data.frame(from = c(1,2), to = c(1,3))
+visNetwork(nodes, edges, width = "100%")
+```
+
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
